--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 
 <body>
 <center>
-  <h3 class="btn btn-info heading">Changing width, height and postion of a square in Realtime
+  <h3 class="btn btn-info heading">Changing width, height and of a uncle in Realtime
     <br>
     <span class="read">NOTE - Get your left and right wrist closer 
-      to reduce the size of the square and to increase the size of 
-      the square keep your left and right wrist far from each other. 
-      Move you nose to move the square</span>
+      to reduce the size of the text and to increase the size of 
+      the text keep your left and right wrist far from each other. 
+      </span>
     <br>
     <span id="square_side"></span>
 
